migrate dropdown classes to BS4

--- a/examples/kitchen-sink.html
+++ b/examples/kitchen-sink.html
@@ -431,25 +431,15 @@
           <div class="card" id="dropdowns">
             <h4 class="card-header">Dropdowns</h4>
             <div class="card-body clearfix">
-            <div class="dropdown">
               <!-- Link or button to toggle dropdown -->
-              <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu" style="display: block; position: static;">
-                <li class="dropdown-header">Dropdown header</li>
-                <li class="disabled">
-                  <a tabindex="-1" href="#">Action</a>
-                </li>
-                <li>
-                  <a tabindex="-1" href="#">Another action</a>
-                </li>
-                <li>
-                  <a tabindex="-1" href="#">Something else here</a>
-                </li>
-                <li class="divider"></li>
-                <li>
-                  <a tabindex="-1" href="#">Separated link</a>
-                </li>
-              </ul>
-            </div>
+              <div class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu" style="display: block; position: static;">
+                <h6 class="dropdown-header">Dropdown header</h6>
+                <a class="dropdown-item disabled" tabindex="-1" href="#">Action</a>
+                <a class="dropdown-item" tabindex="-1" href="#">Another action</a>
+                <a class="dropdown-item" tabindex="-1" href="#">Something else here</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" tabindex="-1" href="#">Separated link</a>
+              </div>
             </div>
           </div>
         </div>
