--- a/examples/kitchen-sink.html
+++ b/examples/kitchen-sink.html
@@ -449,19 +449,31 @@
             </h4>
             <div class="card-body">
             <div class="input-group">
-              <span class="input-group-btn">                <button class="btn btn-default" type="button">Go!</button>              </span><input type="text" class="form-control" placeholder="Username">
+              <div class="input-group-prepend">
+                <button class="btn btn-secondary" type="button">Go!</button>
+              </div>
+              <input type="text" class="form-control" placeholder="Username">
+            </div><br>
+            <div class="input-group input-group-lg">
+              <input type="text" class="form-control" placeholder="a large input">
+              <div class="input-group-append">
+                <span class="input-group-text">.00</span>
+              </div>
+            </div><br>
+            <div class="input-group input-group-sm">
+              <input type="text" class="form-control" placeholder="a small input">
+              <div class="input-group-append">
+                <span class="input-group-text">.00</span>
+              </div>
             </div><br>
             <div class="input-group">
-              <input type="text" class="form-control input-lg" placeholder="a large input">
-              <span class="input-group-addon input-large">.00</span>
-            </div><br>
-            <div class="input-group">
-              <input type="text" class="form-control input-sm" placeholder="a small input">
-              <span class="input-group-addon input-large">.00</span>
-            </div><br>
-            <div class="input-group">
-              <span class="input-group-addon">$</span><input type="text" class="form-control">
-              <span class="input-group-addon">.00</span>
+              <div class="input-group-prepend">
+                <span class="input-group-text">$</span>
+              </div>
+              <input type="text" class="form-control">
+              <div class="input-group-append">
+                <span class="input-group-text">.00</span>
+              </div>
             </div>
             </div>
           </div>
