--- a/examples/kitchen-sink.html
+++ b/examples/kitchen-sink.html
@@ -704,51 +704,43 @@
             </h4>
             <div class="card-body">
             <ul class="pagination" style="margin-right: 10px;">
-              <li>
-                <a href="#">Prev</a>
+              <li class="page-item">
+                <a class="page-link" href="#">Prev</a>
               </li>
-              <li>
-                <a href="#">1</a>
+              <li class="page-item">
+                <a class="page-link" href="#">1</a>
               </li>
-              <li>
-                <a href="#">2</a>
+              <li class="page-item">
+                <a class="page-link" href="#">2</a>
               </li>
-              <li>
-                <a href="#">3</a>
+              <li class="page-item">
+                <a class="page-link" href="#">3</a>
               </li>
-              <li>
-                <a href="#">4</a>
+              <li class="page-item">
+                <a class="page-link" href="#">4</a>
               </li>
-              <li>
-                <a href="#">Next</a>
+              <li class="page-item">
+                <a class="page-link" href="#">Next</a>
               </li>
             </ul>
             <ul class="pagination pagination-lg">
-              <li>
-                <a href="#">Prev</a>
+              <li class="page-item">
+                <a class="page-link" href="#">Prev</a>
               </li>
-              <li>
-                <a href="#">1</a>
+              <li class="page-item">
+                <a class="page-link" href="#">1</a>
               </li>
-              <li>
-                <a href="#">2</a>
+              <li class="page-item">
+                <a class="page-link" href="#">2</a>
               </li>
-              <li>
-                <a href="#">3</a>
+              <li class="page-item">
+                <a class="page-link" href="#">3</a>
               </li>
-              <li>
-                <a href="#">4</a>
+              <li class="page-item">
+                <a class="page-link" href="#">4</a>
               </li>
-              <li>
-                <a href="#">Next</a>
-              </li>
-            </ul>
-            <ul class="pager">
-              <li>
-                <a href="#">Prev</a>
-              </li>
-              <li>
-                <a href="#">Next</a>
+              <li class="page-item">
+                <a class="page-link" href="#">Next</a>
               </li>
             </ul>
           </div>
