--- a/examples/kitchen-sink.html
+++ b/examples/kitchen-sink.html
@@ -745,12 +745,17 @@
             </ul>
           </div>
         </div>
-          <div class="card" id="labels">
+          <div class="card" id="badges">
             <h4 class="card-header">Labels and Badges
             </h4>
             <div class="card-body">
-            <h3><span class="label label-default">Default</span>&nbsp;<span class="label label-success">Success</span>&nbsp;<span class="label label-warning">Warning</span>&nbsp;<span class="label label-danger">Danger</span>&nbsp;<span class="label label-info">Info</span></h3>
-            <p class="lead"><a href="#">Inbox <span class="badge">42</span></a></p>
+            <h3>
+              <span class="badge badge-dark">Default</span>&nbsp;
+              <span class="badge badge-success">Success</span>&nbsp;
+              <span class="badge badge-warning">Warning</span>&nbsp;
+              <span class="badge badge-danger">Danger</span>&nbsp;
+              <span class="badge badge-info">Info</span></h3>
+            <p class="lead"><a href="#">Inbox <span class="badge badge-pill badge-gray">42</span></a></p>
             </div>
           </div>
         </div>
