migrate media components to bs4

--- a/examples/kitchen-sink.html
+++ b/examples/kitchen-sink.html
@@ -827,14 +827,14 @@
             <div class="card-body">
             <p><em>Placeholder images from <a href="https://placeholder.com/">placeholder.com</a></em></p>
             <div class="media">
-              <a class="pull-left" href="#">    <img class="media-object img-circle" src="http://placehold.it/64x64">  </a>
+              <a class="mr-3" href="#">    <img class="rounded-circle" src="http://placehold.it/64x64">  </a>
               <div class="media-body">
-                <h4 class="media-heading">Media heading</h4>
+                <h4>Media heading</h4>
                 <p>This is the content for your media.</p>
-                <div class="media">
-                  <a class="pull-left" href="#">    <img class="media-object img-circle" src="http://placehold.it/64x64">  </a>
+                <div class="media mt-3">
+                  <a class="mr-3" href="#">    <img class="rounded-circle" src="http://placehold.it/64x64">  </a>
                   <div class="media-body">
-                    <h4 class="media-heading">Media heading</h4>
+                    <h4>Media heading</h4>
                     <p>This is the content for your media.</p>
                   </div>
                 </div>
