--- a/examples/logo-carousel.html
+++ b/examples/logo-carousel.html
@@ -13,25 +13,26 @@
   <body>
     <div class="container text-center">
       <div class="row">
+        <div class="col-md-12 mt-4">
         <div class="card">
         <h4 class="card-header">Carousel</h4>
         <div class="card-body">
            <div class="metaCarousel">
             <div id="carousel-example-generic" class="carousel slide" data-pause="hover" data-ride="carousel">
 
-             <div class="carousel-inner" role="listbox">
-              <div class="item active">
+             <div class="carousel-inner">
+              <div class="carousel-item active">
                 <img src="../dist/assets/MetaBrainz_logo.svg"></img>
-                <div class="caption">
+                <div class="carousel-caption">
                   <h2>MetaBrainz</h2>
                   <p>
                     Add some text here
                   </p>
                 </div>
               </div>
-              <div class="item">
+              <div class="carousel-item">
                 <img src="../dist/assets/MusicBrainz_logo.svg"></img>
-                <div class="caption">
+                <div class="carousel-caption">
                   <h2>MusicBrainz</h2>
                   <p>
                     An open music encyclopedia that collects music metadata and makes it
@@ -40,49 +41,49 @@
                   </p>
                 </div>
               </div>
-              <div class="item">
+              <div class="carousel-item">
                 <img src="../dist/assets/AcousticBrainz_logo.svg"></img>
-                <div class="caption">
+                <div class="carousel-caption">
                   <h2>AcousticBrainz</h2>
                   <p>Project text blablablba</p>
                 </div>
               </div>
-              <div class="item">
+              <div class="carousel-item">
                 <img src="../dist/assets/Picard_logo.svg"></img>
-                <div class="caption">
+                <div class="carousel-caption">
                   <h2>MusicBrainz Picard</h2>
                   <p>Project text blablablba</p>
                 </div>
               </div>
-              <div class="item">
+              <div class="carousel-item">
                 <img src="../dist/assets/CritiqueBrainz_logo.svg"></img>
-                <div class="caption">
+                <div class="carousel-caption">
                   <h2>CritiqueBrainz</h2>
                   <p>Project text blablablba</p>
                 </div>
               </div>
-              <div class="item">
+              <div class="carousel-item">
                 <img src="../dist/assets/BookBrainz_logo.svg"></img>
-                <div class="caption">
+                <div class="carousel-caption">
                   <h2>BookBrainz</h2>
                   <p>Project text blablablba</p>
                 </div>
               </div>
-              <div class="item">
+              <div class="carousel-item">
                 <img src="../dist/assets/CoverArtArchive_logo.svg"></img>
-                <div class="caption">
+                <div class="carousel-caption">
                   <h2>CoverArtArchive</h2>
                   <p>Project text blablablba</p>
                 </div>
               </div>
              </div>
                        <!-- Controls -->
-              <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+              <a class="carousel-control-prev" href="#carousel-example-generic" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
               </a>
-              <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+              <a class="carousel-control-next" href="#carousel-example-generic" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
               </a>
             </div>
