add link to logo carousel example

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <div class="list-group">
             <a class="list-group-item list-group-item-action" href="https://github.com/LordSputnik/lobes">View on GitHub</a>
             <a class="list-group-item list-group-item-action" href="examples/kitchen-sink.html">View "Kitchen Sink" Example</a>
+            <a class="list-group-item list-group-item-action" href="examples/logo-carousel.html">View "Logo Carousel" Example</a>
             <a class="list-group-item list-group-item-action" href="examples/bootswatch.html">View "BootSwatch" Example</a>
           </div>
           
