update package metadata for publishing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   
   <head>
-    <title>Lobes - for MetaBrainz - A Bootstrap 4 Theme</title>
+    <title>Lobes 4 - for MetaBrainz - A Bootstrap 4 Theme</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="dist/css/bootstrap.css">
     <script type="text/javascript" src="/fontawesome-free-5.15.2-web/js/all.min.js"></script>
@@ -42,7 +42,7 @@ npm start</code></pre>
             <h3 class="card-header">README</h3>
             <div class="card-body">
               <h1 id="lobes">Lobes</h1>
-<p><strong>Lobes</strong> is a Bootstrap 4 theme developed by <strong>{Monkey.Do}</strong> and <strong>{Ben Ockmore}</strong> for <strong>MetaBrainz</strong></p>
+<p><strong>Lobes</strong> is a Bootstrap 4 theme developed by <strong>{Monkey.Do}</strong> and <strong>Ben Ockmore</strong> for <strong>MetaBrainz</strong></p>
 
             </div>
           </div>
