Remove deprecated jumbotron
Bootstrap5 drops the jumbotron component

--- a/examples/kitchen-sink.html
+++ b/examples/kitchen-sink.html
@@ -115,7 +115,7 @@
       </div>
     </div>
     <div class="container">
-      <div class="jumbotron">
+      <div>
       <h1>
            Lobes - for MusicBrainz
            <small><br/>Kitchen Sink</small>
