--- a/examples/kitchen-sink.html
+++ b/examples/kitchen-sink.html
@@ -4,12 +4,11 @@
   
   <head>
     <title>Lobes - for MusicBrainz - A Bootstrap 4 Theme</title>
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../dist/css/bootstrap.css">
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" ></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/fontawesome.min.css" integrity="sha512-shT5e46zNSD6lt4dlJHb+7LoUko9QZXTGlmWWx0qjI9UhQrElRb+Q5DM7SVte9G9ZNmovz2qIaV7IWv0xQkBkw==" crossorigin="anonymous" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/js/all.min.js" integrity="sha512-UwcC/iaz5ziHX7V6LjSKaXgCuRRqbTp1QHpbOJ4l1nw2/boCfZ2KlFIqBUA/uRVF0onbREnY9do8rM/uT/ilqw==" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.bundle.min.js" integrity="sha512-wV7Yj1alIZDqZFCUQJy85VN+qvEIly93fIQAN7iqDFCPEucLCeNFz4r35FCo9s6WrpdDQPi80xbljXB8Bjtvcg==" crossorigin="anonymous"></script>
     <style>
       body {
         padding-bottom: 60px;
@@ -23,7 +22,7 @@
         <a class="navbar-brand logo" href="#">
             <img src="../dist/assets/MetaBrainz_logo_mini.svg" alt=" Lobes - for MusicBrainz"></img>
         </a>
-        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".header-collapse">
+        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".header-collapse">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -33,7 +32,7 @@
         <div class="collapse navbar-collapse header-collapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item dropdown">
-              <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">CSS <span class="caret"></span></a>
+              <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button">CSS <span class="caret"></span></a>
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="#colors">Colors</a>
                 <a class="dropdown-item" href="#headings">Headings</a>
@@ -44,7 +43,7 @@
               </div>
             </li>
             <li class="nav-item dropdown">
-              <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">Components <span class="caret"></span></a>
+              <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button">Components <span class="caret"></span></a>
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="#dropdowns">Dropdowns</a>
                 <a class="dropdown-item" href="#input-groups">Input Groups</a>
@@ -61,7 +60,7 @@
               </div>
             </li>
             <li class="nav-item dropdown">
-              <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">Source <span class="caret"></span></a>
+              <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button">Source <span class="caret"></span></a>
               <div class="dropdown-menu">
                 <h6 class="dropdown-header">CSS Files</h6>
                 <a class="dropdown-item" href="../dist/css/bootstrap.css">bootstrap.css</a>
@@ -71,40 +70,7 @@
                 <a class="dropdown-item" href="../less/variables.less">variables.less</a>
                 <a class="dropdown-item" href="../less/theme.less">theme.less</a>
               </div>
-            </li>
-            <!-- <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#colors">Colors</a></li>
-
-              </ul>
-            <li>
-            <a href="#">Blog
-            </a>
-            </li> 
-            <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Finances<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#colors">Colors</a></li>
-
-              </ul>
-            </li>
-            <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Annual Report<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#colors">Colors</a></li>
-
-              </ul>
-            </li>
-            </li>
-            <li>
-            <a href="#">Donate
-            </a>
-            </li>
-            <li>
-            <a href="#">Contact
-            </a>
-            </li> -->            
+            </li>  
           </ul>
           <ul class="navbar-nav">
             <li class="nav-item support-link">
@@ -390,11 +356,6 @@
                 <button type="button" class="btn btn-lg btn-danger">Danger</button>
                 <button type="button" class="btn btn-lg btn-link">Link</button>
               </p>
-              <p>
-              <legend>Hexagonal button proof of concept:</legend>
-                <span class="hb hb-sm hb-flickr"><i class="fas fa-bolt"></i></span>
-              </p>
-              <p>
               <legend>Sizes</legend>
                 <button type="button" class="btn btn-secondary">Default</button>
                 <button type="button" class="btn btn-primary">Primary</button>
@@ -483,9 +444,9 @@
             <h4 class="card-header">Images
             </h4>
             <div class="card-body">
-            <p><img src="http://placehold.it/100x100" class="rounded">
-              <img src="http://placehold.it/100x100" class="rounded-circle">
-              <img src="http://placehold.it/100x100" class="img-thumbnail"></p>
+            <p><img src="https://placehold.co/100x100" class="rounded">
+              <img src="https://placehold.co/100x100" class="rounded-circle">
+              <img src="https://placehold.co/100x100" class="img-thumbnail"></p>
             </div>
           </div>
         </div>
@@ -765,25 +726,25 @@
             </h4>
             <div class="card-body">
             <div>
-              <div class="alert alert-danger">
-                <button type="button" class="close" data-dismiss="alert">&times;</button>
+              <div class="alert alert-dismissible alert-danger">
                 <strong>Oh snap!</strong> <a href="#" class="alert-link">Change a few things up</a> and try submitting again.
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
               </div>
-              <div class="alert alert-success">
-                <button type="button" class="close" data-dismiss="alert">&times;</button>
+              <div class="alert alert-dismissible alert-success">
                 <strong>Well done!</strong> You successfully read <a href="#" class="alert-link">this important alert message</a>.
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
               </div>
-              <div class="alert alert-warning">
-                <button type="button" class="close" data-dismiss="alert">&times;</button>
+              <div class="alert alert-dismissible alert-warning">
                 <strong>Heads up!</strong> This <a href="#" class="alert-link">alert needs your attention</a>, but it's not super important.
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
               </div>
-              <div class="alert alert-info">
-                <button type="button" class="close" data-dismiss="alert">&times;</button>
+              <div class="alert alert-dismissible alert-info">
                 <strong>Heads up!</strong> This <a href="#" class="alert-link">alert needs your attention</a>, but it's not super important.
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
               </div>
-              <div class="alert">
-                <button type="button" class="close" data-dismiss="alert">&times;</button>
+              <div class="alert alert-dismissible">
                 <h4>Warning!</h4>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 <p>This is a block style alert.</p>
               </div>
             </div>
@@ -825,14 +786,14 @@
             <h4 class="card-header">Media Object
             </h4>
             <div class="card-body">
-            <p><em>Placeholder images from <a href="https://placeholder.com/">placeholder.com</a></em></p>
+            <p><em>Placeholder images from <a href="https://placehold.co">placehold.co</a></em></p>
             <div class="media">
-              <a class="mr-3" href="#">    <img class="rounded-circle" src="http://placehold.it/64x64">  </a>
+              <a class="mr-3" href="#">    <img class="rounded-circle" src="https://placehold.co/64x64">  </a>
               <div class="media-body">
                 <h4>Media heading</h4>
                 <p>This is the content for your media.</p>
                 <div class="media mt-3">
-                  <a class="mr-3" href="#">    <img class="rounded-circle" src="http://placehold.it/64x64">  </a>
+                  <a class="mr-3" href="#">    <img class="rounded-circle" src="https://placehold.co/64x64">  </a>
                   <div class="media-body">
                     <h4>Media heading</h4>
                     <p>This is the content for your media.</p>
@@ -965,32 +926,8 @@
     </div>
     <div style="width:100%; text-align:center;">
       <hr>
-      <p>Themestrap by <a href="http://www.divshot.com/" target="_blank" class="navbar-link">Divshot</a></p>
-      <p><a href="https://twitter.com/share" class="twitter-share-button" data-via="divshot" data-hashtags="themestrap">Tweet</a>
-      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></p>
+      <p>Themestrap by <a href="https://www.divshot.com/" target="_blank" class="navbar-link">Divshot</a></p>
     </div>
-    <script type="text/javascript">
-      var navbar = document.getElementsByClassName('navbar-fixed-top')[0];
-      var navbarClasses = navbar.className;
-      if (hasClass(navbar, "animated")) {
-        navbar.className = navbarClasses + " tall";
-        document.getElementsByTagName("body")[0].className = document.getElementsByTagName("body")[0].className + " withTallNavbar";
-        window.onscroll=function(){menuSize(navbar)}
-      }
-      function menuSize(element)
-      {
-          var scrollBarPosition = window.pageYOffset | document.body.scrollTop;
-
-          // At specifiv position do what you want 
-          if(scrollBarPosition < 150)
-              element.className = navbarClasses + " tall";
-          else
-              element.className = navbarClasses;
-      }
-      function hasClass(el, cls) {
-        return el.className && new RegExp("(\\s|^)" + cls + "(\\s|$)").test(el.className);
-      }
-    </script>
   </body>
 
 </html>
