--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <html>
   
   <head>
-    <title>Lobes 4 - for MetaBrainz - A Bootstrap 4 Theme</title>
-    <meta name="viewport" content="width=device-width">
+    <title>Lobes 5 - for MetaBrainz - A Bootstrap 5 Theme</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="dist/css/bootstrap.css">
-    <script type="text/javascript" src="/fontawesome-free-5.15.2-web/js/all.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" ></script>\
   </head>
   
   <body>
@@ -16,11 +14,11 @@
       <div class="row">
         <div class="col-xl-6 offset-xl-3">
           <h1 class="page-header"> Lobes - for MetaBrainz
-            <small>(4.0.0)</small>
+            <small>(5.0.0)</small>
           </h1>
-          <p class="lead">A theme for <a href="https://getbootstrap.com/docs/4.6">Bootstrap 4</a></p><p>by <a href="https://github.com/MonkeyDo">Monkey.Do</a> and <a href="https://github.com/LordSputnik">Ben Ockmore</a></p>
+          <p class="lead">A theme for <a href="https://getbootstrap.com/docs/5.3">Bootstrap 5</a></p><p>by <a href="https://github.com/MonkeyDo">Monkey.Do</a> and <a href="https://github.com/LordSputnik">Ben Ockmore</a></p>
           <div class="list-group">
-            <a class="list-group-item list-group-item-action" href="https://github.com/LordSputnik/lobes">View on GitHub</a>
+            <a class="list-group-item list-group-item-action" href="https://github.com/metabrainz/lobes">View on GitHub</a>
             <a class="list-group-item list-group-item-action" href="examples/kitchen-sink.html">View "Kitchen Sink" Example</a>
             <a class="list-group-item list-group-item-action" href="examples/bootswatch.html">View "BootSwatch" Example</a>
           </div>
@@ -30,7 +28,7 @@
             <div class="card-body">
               <p>Download the <a href="dist/css/bootstrap.css" download>bootstrap.css</a> or <a href="dist/css/bootstrap.min.css" download>bootstrap.min.css</a> files or install using NPM:</p>
               
-<pre><code>git clone https://github.com/LordSputnik/lobes.git
+<pre><code>git clone -b bootstrap5 https://github.com/metabrainz/lobes.git
 npm install
 npm start</code></pre>
               
@@ -41,7 +39,7 @@ npm start</code></pre>
             <h3 class="card-header">README</h3>
             <div class="card-body">
               <h1 id="lobes">Lobes</h1>
-<p><strong>Lobes</strong> is a Bootstrap 4 theme developed by <strong>{Monkey.Do}</strong> and <strong>Ben Ockmore</strong> for <strong>MetaBrainz</strong></p>
+<p><strong>Lobes</strong> is a Bootstrap 5 theme developed by <strong>{Monkey.Do}</strong> and <strong>Ben Ockmore</strong> for <strong>MetaBrainz</strong></p>
 
             </div>
           </div>
