Fix outline buttons styles
+ add them to the kitchen sink

--- a/examples/kitchen-sink.html
+++ b/examples/kitchen-sink.html
@@ -356,6 +356,16 @@
                 <button type="button" class="btn btn-lg btn-danger">Danger</button>
                 <button type="button" class="btn btn-lg btn-link">Link</button>
               </p>
+              <p>
+              <legend>Outline</legend>
+                <button type="button" class="btn btn-outline-secondary">Default</button>
+                <button type="button" class="btn btn-outline-primary">Primary</button>
+                <button type="button" class="btn btn-outline-success">Success</button>
+                <button type="button" class="btn btn-outline-info">Info</button>
+                <button type="button" class="btn btn-outline-warning">Warning</button>
+                <button type="button" class="btn btn-outline-danger">Danger</button>
+              </p>
+              <p>
               <legend>Sizes</legend>
                 <button type="button" class="btn btn-secondary">Default</button>
                 <button type="button" class="btn btn-primary">Primary</button>
